css/interests.css
@import "colors.css";

body {
  background-color: var(--main-bg-color);
  font-family: Helvetica, sans-serif;
}

main {
  margin: 1rem;
}

#categorylist {
  max-width: 600px;
  margin: 0 auto;
  height: 160px;
}

#categorylist > ul {
  list-style-type: none;
}

.categorylink {
  padding: 8px;
  margin: 4px;
  transition: font-size 0.3s ease, background-color 0.3s ease;
}

.categorylink:hover {
  background-color: var(--secondary-color);
  font-size: 18px;
}

.categorylink > a {
  text-decoration: none;
}

.categorylink > a:visited {
  color: black;
}

.category {
  margin-top: 32px;
}

.category > img {
  max-width: 100%;
  max-height: 600px;
}

